--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url("../blocks/cover/cover.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
 @import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__button/cover__button.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__author/footer__author.css");
 @import url("../blocks/intro/intro.css");
