--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,9 +1,11 @@
 .cover__subtitle {
     width: 280px;
     height: 66px;
-    font-size: 'Inter';
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
+    z-index: 2;
+    margin-top: 0;
+    margin-bottom: 32px;
 }
