--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,13 +5,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 92px;
+    margin-bottom: 92px;
 }
 
 .cover img {
     height: 740px;
     width: 1184px;
     overflow: hidden;
-    opacity: 0.3;
+    opacity: 0.7;
     background: #2a2c2f;
     z-index: 0;
     position: absolute;
