--- a/blocks/intro/__author/intro__author.css
+++ b/blocks/intro/__author/intro__author.css
@@ -2,6 +2,8 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
-    width: 720px;
-    height: 34px;
+    padding-left: 506px;
+    display: block;
+    padding-left: 506px;
+    margin-top: -49px;
 }
