add media queries for 320px

--- a/blocks/lead/__image/lead__hero-image.css
+++ b/blocks/lead/__image/lead__hero-image.css
@@ -5,3 +5,11 @@
     overflow: hidden;
     margin-top: 64px;
 }
+
+@media screen and (max-width: 320px) {
+    .lead__hero-image {
+        width: 100%;
+        height: auto;
+        margin-top: 40px;
+    }
+}
