--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -3,3 +3,9 @@
     flex-direction: row;
     margin-top: 92px;
 }
+
+@media screen and (max-width: 320px) {
+ .place {
+    margin-top: 62px;
+ }
+}
