--- a/blocks/intro/__author/intro__author.css
+++ b/blocks/intro/__author/intro__author.css
@@ -4,6 +4,14 @@
     line-height: 34px;
     padding-left: 506px;
     display: block;
-    padding-left: 506px;
     margin-top: -49px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__author {
+        font-size: 24px;
+        line-height: 34px;
+        padding-left: 30%;
+        margin-top: -20px;
+    }   
 }
