--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -3,5 +3,12 @@
     font-size: 24px;
     line-height: 34px;
     width: 722px;
-    height: 136px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__quote {
+        font-size: 24px;
+        line-height: 30px;
+        width: 288px;
+    }
 }
