--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,6 +3,14 @@
     font-size: 16px;
     line-height: 26.08px;
     width: 720px;
-    height: 182px;
     padding-top: 42px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__text {
+        font-size: 16px;
+        line-height: 26.08px;
+        width: auto;
+        padding-top: 0;
+    }   
 }
