--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,8 +2,15 @@
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
-    height: 115px;
     width: 1017px;
-    margin-top: 92px;
     margin-bottom: 40px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+        width: 288px;
+        margin: 0;
+    }
 }
