--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,15 @@
 .intro {
     width: 1017px;
-    height: 516px;
     margin: auto;
     margin-top: 64px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        width: 100%;
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-top: 44px;
+        box-sizing: border-box;
+    }   
 }
