--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,3 +9,13 @@
     height: 72px;
     margin-top: 32px;
 }
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle {
+        font-size: 16px;
+        margin-top: 60px;
+        width: 288px;
+        height: 40px;
+        line-height: 20px;
+    }
+}
