--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,18 @@
 .lead__title {
     font-size: 96px;
     font-weight: 900;
-    line-height: 100px;
     letter-spacing: 0em;
     text-align: center;
     width: 793px;
     height: 200px;
     margin-top: 0;
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        font-size: 40px;
+        width: 288px;
+        height: 88px;
+    }
 }
