--- a/blocks/logo/__block/logo__block.css
+++ b/blocks/logo/__block/logo__block.css
@@ -3,4 +3,12 @@
     width: 32px;
     height: 32px;
     margin: auto;
+    border-radius: 4px;
+}
+
+@media screen and (max-width: 320px) {
+    .logo__block {
+        width: 23.7px;
+        height: 23.7px;
+    }
 }
