--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,12 @@
     font-family: 'Inter', Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     max-width: 1280px;
-
     margin: auto;
+    text-rendering: optimizeLegibility;
+}
+
+@media screen and (max-width: 320px) {
+    .page {
+        max-width: 320px;
+    }
 }
