--- a/blocks/photo-grid/__table/photo-grid__table.css
+++ b/blocks/photo-grid/__table/photo-grid__table.css
@@ -3,4 +3,14 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 16px;
+    padding: 0;
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid__table {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
 }
