--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,11 @@
 .photo-grid {
     width: 1184px;
-    height: 442px;
-    margin-top: 92px;
+    margin: 92px auto 0 auto;
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    width: 100%;
+    margin-top: 38px;
+  }   
 }
