--- a/blocks/places/place/__artist/place__artist.css
+++ b/blocks/places/place/__artist/place__artist.css
@@ -4,6 +4,11 @@
     line-height: 14.52px;
     color: #AAAAAA;
     width: 58px;
-    height: 15px;
     margin-bottom: 0;
 }
+
+/* @media screen and (max-width: 320px) {
+    .place__artist {
+ 
+    }
+} */
