work on styles for 320

--- a/blocks/places/place/__artist/place__artist.css
+++ b/blocks/places/place/__artist/place__artist.css
@@ -5,6 +5,7 @@
     color: #AAAAAA;
     width: 58px;
     margin-bottom: 0;
+    grid-area: artist;
 }
 
 /* @media screen and (max-width: 320px) {
