--- a/blocks/places/place/__artist/place__artist.css
+++ b/blocks/places/place/__artist/place__artist.css
@@ -8,6 +8,10 @@
     grid-area: artist;
 }
 
+.place__artist-wrapper {
+    align-self: center;
+    
+}
 /* @media screen and (max-width: 320px) {
     .place__artist {
  
