--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,3 +9,12 @@
     margin-top: 0;
     margin-bottom: 32px;
 }
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        height: 48px;
+        margin-bottom: 16px;
+    }
+}
