--- a/blocks/places/place/__image/place__image.css
+++ b/blocks/places/place/__image/place__image.css
@@ -4,3 +4,11 @@
     overflow: hidden;
     grid-area: pic;
 }
+
+@media screen and (max-width: 320px) {
+    .place__image {
+        width: 320px;
+        height: 320px;
+        margin-left: -18px;
+    }
+}
