--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,8 +1,7 @@
 .place {
-    display: flex;
-    flex-direction: row;
     margin-top: 92px;
     display: grid;
+    grid-column-gap: 40px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-template-areas:
@@ -28,11 +27,3 @@
  }
 }
 
-/* display: grid;
-grid-template-colums: repeat(2, 1fr);
-grid-template-rows: repeat(3, 1fr);
-grid-template-areas:
-"title artist
-pic text
-pic text
-button ." */
