add styles to mobile version

--- a/blocks/places/place/__button/place__button.css
+++ b/blocks/places/place/__button/place__button.css
@@ -17,6 +17,7 @@
 @media screen and (max-width: 320px) {
     .place__button {
         width: 288px;
+        margin-top: 0;
     }    
 
     .place__button a {
