--- a/blocks/places/place/__image/place__image.css
+++ b/blocks/places/place/__image/place__image.css
@@ -5,6 +5,9 @@
     grid-area: pic;
 }
 
+.place__image img {
+    width: 100%;
+}
 @media screen and (max-width: 320px) {
     .place__image {
         width: 320px;
