--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -2,8 +2,8 @@
     margin-top: 92px;
     display: grid;
     grid-column-gap: 40px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: minmax(100px, max-content) minmax(100px, max-content);
+    grid-template-rows: auto repeat(minmax(100px, max-content));
     grid-template-areas:
     "title artist"
     "pic text"
@@ -11,8 +11,13 @@
     "button .";
 }
 
+.places .place:nth-child(4) button {
+    margin-top: 0;
+}
+
 @media screen and (max-width: 320px) {
  .place {
+    max-width: 320px;
     margin: 62px 16px auto;
     grid-auto-flow: column;
     grid-template-rows: auto;
