--- a/blocks/lead/__image/lead__hero-image.css
+++ b/blocks/lead/__image/lead__hero-image.css
@@ -13,3 +13,10 @@
         margin-top: 40px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .lead__hero-image {
+        margin-top: 69px;
+        width: 100%;
+    }
+}
