--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -22,3 +22,9 @@
         margin-bottom: 16px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .cover__title {
+        padding-top: 170px;
+    }
+}
