--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -31,3 +31,17 @@
         margin-bottom: 64px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .cover img {
+        width: 768px;
+        height: 746px;
+        overflow: hidden;
+    }
+
+    .cover {
+        width: 768px;
+        height: 746px;
+        margin-bottom: 88px;
+    }
+}
