--- a/blocks/intro/__author/intro__author.css
+++ b/blocks/intro/__author/intro__author.css
@@ -15,3 +15,9 @@
         margin-top: -20px;
     }   
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .intro__author {
+        margin-top: -10px;
+    }
+}
