--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -7,8 +7,13 @@
 
 @media screen and (max-width: 320px) {
     .intro__quote {
-        font-size: 24px;
         line-height: 30px;
         width: 288px;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .intro__quote {
+        margin: 0;
     }
 }
