--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -19,3 +19,9 @@
         line-height: 20px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .lead__subtitle {
+        margin-top: 92px;
+    }
+}
