--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -15,3 +15,10 @@
         margin-top: 51px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .lead {
+        width: auto;
+        height: auto;
+    }
+}
