--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -8,3 +8,9 @@
 .photo-grid__image img {
     width: 100%;
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .photo-grid__image {
+        width: 352px;
+    }
+}
