--- a/blocks/photo-grid/__table/photo-grid__table.css
+++ b/blocks/photo-grid/__table/photo-grid__table.css
@@ -14,3 +14,11 @@
         gap: 12px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .photo-grid__table {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        margin: auto 24px
+    }
+}
