--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,3 +9,10 @@
     margin-top: 38px;
   }   
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .photo-grid {
+      width: 100%;
+      margin-top: 64px;
+    }
+}
