--- a/blocks/places/place/__image/place__image.css
+++ b/blocks/places/place/__image/place__image.css
@@ -15,3 +15,10 @@
         margin-left: -18px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .place__image {
+        width: 340px;
+        height: auto;
+    }
+}
