--- a/blocks/places/place/__text/place__text.css
+++ b/blocks/places/place/__text/place__text.css
@@ -20,3 +20,12 @@
         line-height: 163%;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .place__text {
+        font-size: 16px;
+        line-height: 163%;
+        width: 352px;
+        height: auto;
+    }
+}
