--- a/blocks/places/place/__title/place__title.css
+++ b/blocks/places/place/__title/place__title.css
@@ -20,3 +20,12 @@
         width: 288px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .place__title {
+        font-size: 42px;
+        line-height: 46px;
+        height: auto;
+        width:340px
+    }
+}
