--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -32,3 +32,10 @@
  }
 }
 
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .place {
+        max-width: 768px;
+        margin: 88px 24px auto;
+    }
+}
+
