--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -11,3 +11,9 @@
         max-width: 320px;
     }
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+    .places {
+        max-width: 768px;
+    }
+}
