add styles to tablet and add hover

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -19,6 +19,10 @@
     position: absolute;
 }
 
+.cover:hover img {
+    opacity: 0.3;
+}
+
 @media screen and (max-width: 320px) {
     .cover img {
         width: 320px;
