--- a/blocks/cover/__button/cover__button.css
+++ b/blocks/cover/__button/cover__button.css
@@ -12,3 +12,11 @@
     color: white;
     text-decoration: none;
 }
+
+.cover__button:hover {
+    background-color: #0063D2;
+}
+
+.cover__button:hover {
+    background-color: #0063D2;
+}
