--- a/blocks/places/place/__button/place__button.css
+++ b/blocks/places/place/__button/place__button.css
@@ -14,6 +14,10 @@
     color: #FFFFFF;
 }
 
+.place__button:hover {
+    background-color: #0063D2;
+}
+
 @media screen and (max-width: 320px) {
     .place__button {
         width: 288px;
@@ -30,5 +34,9 @@
     .place__button a {
         font-size: 18px;
         line-height: 22px;
+    }
+
+    .place__button {
+        margin-top: -150px;
     }
 }
