--- a/blocks/cover/__button/cover__button.css
+++ b/blocks/cover/__button/cover__button.css
@@ -1,21 +1,16 @@
 .cover__button {
     height: 48px;
-    width: 198px;;
+    width: 198px;
     background-color: #0278fe;
     border-radius: 4px;
     box-shadow: none;
     border: none;
     z-index: 2;
-}
-
-.cover__button a {
     color: white;
-    text-decoration: none;
+    font-size: 18px;
+    line-height: 22px;
 }
 
-.cover__button:hover {
-    background-color: #0063D2;
-}
 
 .cover__button:hover {
     background-color: #0063D2;
