--- a/blocks/photo-grid/__table/photo-grid__table.css
+++ b/blocks/photo-grid/__table/photo-grid__table.css
@@ -19,6 +19,6 @@
     .photo-grid__table {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
-        margin: auto 24px
+        margin: auto 24px;
     }
 }
