--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
     max-width: 1280px;
     margin: auto;
     text-rendering: optimizeLegibility;
+    background-color: #2A2C2F;
 }
 
 @media screen and (max-width: 320px) {
