--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Inter";
+    src: url("../styles/fonts/static/Inter-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Inter-Bold";
+    src: url("../../blocks/styles/fonts/static/Inter-Bold.ttf");
+}
+
 .page {
     font-family: 'Inter', Verdana, Geneva, Tahoma, sans-serif;
     color: white;
